# pbl4-OCR

./: .gitignore  README.md  README.rst  pyproject.toml
configs/: en_config.yaml
scripts/: download-bg-images.sh  synthetic-data.sh
src/pbl4_ocr/: __init__.py  easyocr.py  main.py  utils.py
src/pbl4_ocr/detector/: craft_utils.py  detection.py  imgproc.py
src/pbl4_ocr/recognizer/: __init__.py  main.py  train.py
src/pbl4_orc/: basenet.py  config.py  craft.py  easyocr.py  imgproc.py  main.py  recognition.py  utils.py
src/pbl4_orc/detector/: __init__.py
src/pbl4_orc/recognitor/: __init__.py  convert_dataset_trdg.py  dataset.py  labelconverter.py  model.py  recognition.py  run_training.py  test.py  train.py
src/pbl4_orc/recognitor/configs/: en_config.yaml
src/pbl4_orc/recognizer/: convert_dataset_trdg.py  dataset.py  labelconverter.py  main.py  recognition.py  run_training.py  test.py  train.py
src/pbl4_orc/recognizer/modules/: transformation.py
tests/: test_pbl4_ocr.py  test_pbl4_orc.py
