[tool.poetry]
name = "pbl4-ORC"
version = "0.1.0"
description = ""
authors = ["vohoanglong01072001 <mamlong34@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
scipy = "^1.7.1"
PyYAML = "^6.0"
scikit-image = "^0.18.3"
torch = "^1.10.0"
torchvision = "^0.11.1"
opencv-python-headless = "^4.5.4"

[tool.poetry.dev-dependencies]
torchvision = {url = "https://download.pytorch.org/whl/cu111/torchvision-0.11.1%2Bcu111-cp37-cp37m-linux_x86_64.whl"}
pytest = "^5.2"
black = "^21.10b0"
flake8 = "^4.0.1"
mypy = "^0.910"
pandas = "1.3.3"
nltk = "^3.6.5"

[tool.poetry.scripts]
pbl4_orc = "pbl4_orc.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
