[tool.poetry]
name = "pbl4-OCR"
version = "0.1.0"
description = ""
authors = ["vohoanglong01072001 <mamlong34@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
scipy = "^1.7.1"
PyYAML = "^6.0"
scikit-image = "^0.18.3"
opencv-python-headless = "^4.5.4"
pandas = "1.3.3"
nltk = "^3.6.5"

[tool.poe.tasks]
## See https://github.com/python-poetry/poetry/issues/2543
force-cpu = "pip3 install torch==1.10.0+cpu torchvision==0.11.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
flake8 = "^4.0.1"
poethepoet = "^0.11.0"

[tool.poetry.scripts]
pbl4_ocr = "pbl4_ocr.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"